<?xml version="1.0"?>
<package format="2">
  <name>test_remap</name>
  <version>0.1.0</version>
  <description>Simple test nodes to test remapping.</description>

  <maintainer email="fwidmaier@synapticon.com">Felix Widmaier</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
